--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
 
       # Runs a single command using the runners shell
       - name: Install NodeJS
@@ -31,7 +35,7 @@ jobs:
               node-version: 12
         
       - name: Install Surge
-        run: npm install -g sugre
+        run: npm install -g surge
       - name: Run Surge
         run: surge ./ bootcampanunadire.surge.sh --token ${{secrets.SURGETOKEN}}
         
