--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Install Surge
         run: npm install -g surge
       - name: Run Surge
-        run: surge https://github.com/AnushahNadir/demo2 bootcampanunadire.surge.sh --token ${{secrets.SURGETOKEN}}
+        run: surge ./././ bootcampanunadire.surge.sh --token ${{secrets.SURGETOKEN}}
